Added some documentation clearly relating the code to lifting the state

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lifting-the-state-up",
+  "name": "lifting-the-state-up-reactjs-example-by-dr-derek-austin",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
